# nn-zero-to-hero-tinygrad

./: .gitignore  README.md  hello.py  learn_the_basics_1.ipynb  learn_the_basics_2.ipynb  learn_the_basics_3.ipynb  learn_the_basics_4.ipynb  learn_the_basics_5.ipynb  learn_the_basics_6.ipynb  linreg.ipynb  linreg_adam.ipynb  linreg_light.ipynb  linreg_light2.ipynb  linreg_tinygrad.ipynb  pyproject.toml  requirements.txt
lectures/makemore/: NGram_NN_Notes.ipynb  Notes.ipynb  makemore_part1_bigrams.ipynb  makemore_part2_mlp.ipynb  makemore_part3_bn.ipynb  makemore_part4_backprop.ipynb  makemore_part5_cnn1 torch.ipynb  makemore_part5_cnn1.ipynb
lectures/makemore/notes/: BatchNormalization_Notes.ipynb  Bigram_NN_Notes.ipynb
lectures/micrograd/: Notes.ipynb  micrograd_lecture_first_half_roughly.ipynb  micrograd_lecture_first_half_roughly_mod.ipynb
lectures_tiny/makemore/: makemore_part2_mlp_tiny.ipynb  makemore_part2_mlp_tiny.py
