[project]
name = "nn-zero-to-hero-tinygrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.13.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "scipy>=1.15.3",
    "tinygrad>=0.10.2",
    "torch>=2.7.0",
]
